fixed review detail subnav z-index

--- a/app/styles/components/_nav-underlines.scss
+++ b/app/styles/components/_nav-underlines.scss
@@ -26,4 +26,7 @@
       }
     }
   }
+  &.affix{
+    z-index: 100;
+  }
 }
